--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     z-index: 1;
+    
 }
 body{
     
@@ -10,6 +11,9 @@ body{
  .tamagotchi{
     position: absolute;
     z-index: 2;
-    top: 150px;
-    width:2000px;
+    top: 85px;
+    
  }
+.gb{
+    width: 290px;
+}
